# BODifferentialHeuristics

./: CMakeLists.txt  README.md  example_usage.ipynb  run_exp.sh
assets/instances/: BAY_query.txt  den520d_query.txt  empty-32-32_query.txt
assets/landmarks/: landmarks_BAY.txt  landmarks_NY.txt  landmarks_den520d.txt  landmarks_empty-32-32.txt
assets/maps/: den520d_data_10.pkl  den520d_random_10_0.gr  den520d_random_10_1.gr  empty-32-32_data_10.pkl  empty-32-32_random_10_0.gr  empty-32-32_random_10_1.gr
inc/: .dir-locals.el  AbstractSolver.h  ApexSearch.h  BOAStar.h  CH_solver.h  ContractionHierarchy.h  MultiVectorHeuristic.h  NAMOA.h  ShortestPathHeuristic.h
inc/Utils/: Definitions.h  MapQueue.h
src/: .dir-locals.el  compress.cpp  dh_driver.cpp  dpex_driver.cpp  driver.cpp  single_to_all.cpp
src/BiCriteria/: ApexSearch.cpp  BOAStar.cpp  BOD.cpp  CH_solver.cpp  ContractionHierarchy.cpp  DominanceChecker.cpp  Dpex.cpp  MultiVectorHeuristic.cpp  ShortestPathHeuristic.cpp
src/Utils/: ..dir-locals.el.~undo-tree~  .Definitions.cpp.~undo-tree~  .IOUtils.cpp.~undo-tree~  .MapQueue.cpp.~undo-tree~  .MapQueueHash.cpp.~undo-tree~  .apex.cpp.~undo-tree~  .dir-locals.el  MapQueueHash.cpp  apex.cpp
